--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,7 @@ img {
 
 .btn {
   display: inline-block;
+  border-radius:80px;
   background: var(--light-color);
   color: #333;
   padding: 0.4rem 1.3rem;
